java/java-tests/testData/codeInsight/daemonCodeAnalyzer/genericsHighlighting8/IDEA57667.java
class A {
    <T> A(T x) {}

    {
        new <<error descr="Actual type argument and inferred type contradict each other">String</error>>A(1);
    }
}
